fixed an issue with the invisible ping glitch not showing the mention bg properly

--- a/Snippets/Colored Mentions/ColoredMentionsSource.css
+++ b/Snippets/Colored Mentions/ColoredMentionsSource.css
@@ -4,9 +4,6 @@
 .message-2CShn3:hover {
     background-color: var(--background-message-hover) !important;
 }
-.mentioned-Tre-dv:before {
-    content: unset;
-}
 .messageContent-2t3eCI, .compact-2Nkcau .contents-2MsGLg {
     position: unset !important;
 }
@@ -14,7 +11,7 @@
     position: unset;
     filter: none;
 }
-.hasReply-2Cr4KE.mentioned-Tre-dv:not(:has(.roleMention-11Aaqi[style])):before, .mentioned-Tre-dv .mention:before, .mentioned-Tre-dv .roleMention-11Aaqi:before {
+.hasReply-2Cr4KE.mentioned-Tre-dv:not(:has(.roleMention-11Aaqi[style])):before, .mentioned-Tre-dv:before, .mentioned-Tre-dv .roleMention-11Aaqi:before {
     content: "";
     position: absolute;
     top: 0;
@@ -24,7 +21,7 @@
     background-color: var(--info-warning-foreground);
     filter: saturate(var(--saturation-factor,1));
 }
-.hasReply-2Cr4KE.mentioned-Tre-dv:not(:has(.roleMention-11Aaqi[style])):after, .mentioned-Tre-dv .mention:after, .mentioned-Tre-dv .roleMention-11Aaqi:after {
+.hasReply-2Cr4KE.mentioned-Tre-dv:not(:has(.roleMention-11Aaqi[style])):after, .mentioned-Tre-dv:after, .mentioned-Tre-dv .roleMention-11Aaqi:after {
     content: "";
     position: absolute;
     inset: 0;
@@ -39,6 +36,6 @@
     background: currentColor;
     opacity: 0.1;
 }
-.roleMention-11Aaqi ~ [class*="ention"]:before, .roleMention-11Aaqi ~ [class*="ention"].roleMention-11Aaqi:after, .repliedMessage-3Z6XBG [class*="ention"]:before, .repliedMessage-3Z6XBG [class*="ention"]:after, .hasReply-2Cr4KE .mention:before, .hasReply-2Cr4KE .mention:after, .messageContent-2t3eCI:has(.roleMention-11Aaqi) .mention:before, .messageContent-2t3eCI:has(.roleMention-11Aaqi) .mention:after {
+.roleMention-11Aaqi ~ [class*="ention"]:before, .roleMention-11Aaqi ~ [class*="ention"].roleMention-11Aaqi:after, .repliedMessage-3Z6XBG [class*="ention"]:before, .repliedMessage-3Z6XBG [class*="ention"]:after, .hasReply-2Cr4KE .mention:before, .hasReply-2Cr4KE .mention:after, .messageContent-2t3eCI:has(.roleMention-11Aaqi) .mention:before, .messageContent-2t3eCI:has(.roleMention-11Aaqi) .mention:after, .mentioned-Tre-dv:has([class*="mention"]):before, .mentioned-Tre-dv:has([class*="ention"]):after {
     content: unset;
 }
